[feature] - OpenAPI alinhado (expectedVersion em /reserve) + SLO/KPIs & métricas, CI no GitHub Actions e segurança por perfil