@@ -1,6 +1,7 @@
 package com.quickcoders.infolabsproducts.config;
 
 import com.quickcoders.infolabsproducts.infra.JwtAuthenticationFilter;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
@@ -14,6 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -22,25 +24,55 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
+    @Value("${app.security.cors.allowed-origins:http://localhost:3000,http://localhost:8080}")
+    private String allowedOrigins;
+
+    @Value("${app.security.cors.allowed-methods:GET,POST,PUT,DELETE,OPTIONS}")
+    private String allowedMethods;
+
+    @Value("${app.security.cors.allowed-headers:Authorization,Content-Type,X-Correlation-Id,Idempotency-Key}")
+    private String allowedHeaders;
+
+    @Value("${app.security.cors.allow-credentials:true}")
+    private boolean allowCredentials;
+
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
 
     @Bean
-    @Profile("!test")
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    @Profile("dev")
+    public SecurityFilterChain devFilterChain(HttpSecurity http) throws Exception {
+        http
+            .csrf(AbstractHttpConfigurer::disable)
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(authz -> authz
+                // Permitir acesso público à documentação em dev
+                .requestMatchers("/swagger-ui/**", "/swagger-ui.html", "/api-docs/**", "/v3/api-docs/**").permitAll()
+                // Permitir acesso público ao actuator
+                .requestMatchers("/actuator/**").permitAll()
+                // Permitir acesso público ao OpenAPI JSON
+                .requestMatchers("/openapi.yaml", "/openapi.json").permitAll()
+                // Em dev, permitir acesso sem autenticação
+                .anyRequest().permitAll()
+            )
+            .httpBasic(AbstractHttpConfigurer::disable);
+        
+        return http.build();
+    }
+
+    @Bean
+    @Profile("prod")
+    public SecurityFilterChain prodFilterChain(HttpSecurity http) throws Exception {
         http
             .csrf(AbstractHttpConfigurer::disable)
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
             .authorizeHttpRequests(authz -> authz
-                // Permitir acesso público à documentação
-                .requestMatchers("/swagger-ui/**", "/swagger-ui.html", "/api-docs/**", "/v3/api-docs/**").permitAll()
-                // Permitir acesso público ao actuator (para health checks e métricas)
-                .requestMatchers("/actuator/**", "/actuator/health", "/actuator/metrics", "/actuator/prometheus").permitAll()
-                // Permitir acesso público ao OpenAPI JSON
-                .requestMatchers("/openapi.yaml", "/openapi.json").permitAll()
+                // Em prod, apenas health e prometheus são públicos
+                .requestMatchers("/actuator/health", "/actuator/prometheus").permitAll()
                 // Todas as outras requisições precisam de autenticação
                 .anyRequest().authenticated()
             )
@@ -67,10 +99,25 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
+        
+        // Configurar origens permitidas
+        if ("*".equals(allowedOrigins)) {
+            configuration.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        }
+        
+        // Configurar métodos permitidos
+        configuration.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
+        
+        // Configurar headers permitidos
+        if ("*".equals(allowedHeaders)) {
+            configuration.setAllowedHeaders(List.of("*"));
+        } else {
+            configuration.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+        }
+        
+        configuration.setAllowCredentials(allowCredentials);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
